# toxicity-detector

./: .gitignore  LICENSE  README.md  notes_refactor.md  pyproject.toml  toxicity_pipeline_intro.ipynb
config/: app_config.yaml  default_model_config_v0.1.yaml  default_model_config_v0.3.yaml  model_config_cv0.3_2024-11-24_v0.3.yaml  pipeline_config.yaml
config/pipeline_config/: default_pipeline_config_v0.3.yaml  pipeline_config_cv0.3_2024-11-24_v0.3.yaml
notebooks/: toxicity_pipeline_intro.ipynb
src/toxicity_detector/: __init__.py  app.py  backend.py  chains.py  config.py
src/toxicity_detector/package_data/: default_pipeline_config.yaml
tests/: __init__.py  test_config.py
